# rust-learning

./: Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json
01_variables/src/: main.rs
03_conditionals/src/: main.rs
04_shadowing/src/: main.rs
05_loops/src/: main.rs
06_conditionals2/: Cargo.toml
06_conditionals2/src/: main.rs
07_while_loops/src/: main.rs
08_for_loops/src/: main.rs
09_break_and_continue/: Cargo.toml
09_break_and_continue/src/: main.rs
10_match_control_flow/src/: main.rs
11_unit_functions/: Cargo.toml
11_unit_functions/src/: main.rs
12_return_values/src/: main.rs
13_arguments/: Cargo.toml
13_arguments/src/: main.rs
14_borrowing/src/: main.rs
15_panic_to_stop/: Cargo.toml
15_panic_to_stop/src/: main.rs
16_error_handling/: text.txt
16_error_handling/src/: main.rs
17_defining_structs/src/: main.rs
18_structs_2/: Cargo.toml
18_structs_2/src/: main.rs
19_structs_3/src/: main.rs
20_strings_1/: Cargo.toml
20_strings_1/src/: main.rs
21_strings_2_manipulation/: Cargo.toml
21_strings_2_manipulation/src/: main.rs
22_vectors_1/: Cargo.toml
22_vectors_1/src/: main.rs
23_vectors_2_retrieving/: Cargo.toml
23_vectors_2_retrieving/src/: main.rs
24_vectors_3_append/: Cargo.toml
25_enums_1_introduction/: Cargo.toml
26_enums_2_enums_as_type/: Cargo.toml
27_enums_3_option_enum/: Cargo.toml
28_enums_4_applied_enum/: Cargo.toml
29_enums_5_with_vectors/: Cargo.toml
30_enums_6_exhaustive_matches/: Cargo.toml
31_cli_lib/: Cargo.toml
31_cli_lib/src/: colors.rs  (+2 more)
32_resplit/: Cargo.toml
(+10 files in other folders)
