[workspace]
members = ["01_variables", "03_conditionals", "04_shadowing", "05_loops", "06_conditionals2", "07_while_loops", "08_for_loops", "09_break_and_continue", "10_match_control_flow", "11_unit_functions", "12_return_values", "13_arguments", "14_borrowing", "15_panic_to_stop", "16_error_handling", "17_defining_structs", "18_structs_2", "19_structs_3", "20_strings_1", "21_strings_2_manipulation", "22_vectors_1", "23_vectors_2_retrieving", "24_vectors_3_append", "25_enums_1_introduction", "26_enums_2_enums_as_type", "27_enums_3_option_enum", "28_enums_4_applied_enum", "29_enums_5_with_vectors", "30_enums_6_exhaustive_matches", "31_cli_lib", "32_resplit"]
